fix: add keyword button not visible on small screens

--- a/apps/frontend/src/ui/CustomDialog/CustomDialog.module.scss
+++ b/apps/frontend/src/ui/CustomDialog/CustomDialog.module.scss
@@ -88,6 +88,7 @@ input {
 
 .InputWrapper {
   width: 100%;
+  min-width: 35px;
   flex: 1;
   display: flex;
   flex-direction: column;
